working on reply

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -166,7 +166,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \subsubsection*{Could the species interact?} 
 
-          First, and most fundamentally, some interactions are feasible if a pair of species should co-occur while others are not~\citep{Poisot2015}. Assuming that the feasibility of interactions depends on the traits of species involved, we can define the probability of an interaction $L_{ij}$ between species $i$ and $j$, given some description of trait-matching $\mathbf{T_{ij}}$, as $P(L_{ij}|\mathbf{T_{ij}}) = \lambda_{ij}$~\citep{Bartomeus2013,Gravel2013,Weinstein2017}. 
+          First, and most fundamentally, some interactions are feasible if a pair of species should co-occur while others are not~\citep{Poisot2015}. Assuming that the feasibility of interactions depends on the traits of species involved, we can define the probability of an interaction $L_{ij}$ between species $i$ and $j$, given some function describing trait-matching between species $i$ and $j$ $\mathbf{T_{ij}}$, as $P(L_{ij}|\mathbf{T_{ij}}) = \lambda_{ij}$~\citep{Bartomeus2013,Gravel2013,Weinstein2017}. 
           In some cases the traits prohibiting an interaction are known, and there will be little uncertainty about $\lambda_{ij}$.
           In most cases, however, it is not known what traits might prohibit an interaction~\citep{Dormann2017}. Pollinators may visit plants outside of those predicted based on "pollination syndromes"~\citep{Weinstein2017a} and herbivores may consume animal prey when it becomes accessible~\citep{Furness1988,Pietz2000}. These examples illustrate the danger in assuming that seemingly unlikely interactions cannot occur.
 
@@ -179,7 +179,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
           Assuming that an interaction is feasible (i.e., $L_{ij} = 1$;), an interaction may still not occur at a particular place or time~\citep{Poisot2015,Graham2018}. This could be because constraints such as inclement weather or low abundance prevented the interaction~\citep{Jordano2016,Graham2018}, a more preferred interaction partner was available~\citep{Weinstein2017a}, or substantial individual variation in traits meant that local individuals could not interact even if the species in general can~\citep{Gravel2013,Wells2013,Poisot2015}. For example, a rare galler may not parasitize a rare plant because they do not encounter each other. In metawebs describing a community found at several sites, an interaction may also fail to occur because two species do not co-occur at a particular site even if they do co-occur and interact elsewhere~\citep{Graham2018}. We can define the local realisation of an interaction, $X_{ij}$, given that the interaction is feasible, as a stochastic process with associated probability $P(X_{ij}|L_{ij} = 1) = \chi_{ij}$. It is unlikely that $\chi_{ij} = 1$  except in the case of obligate specialists who always interact whenever they co-occur and always co-occur. When $\chi_{ij} < 1$ we cannot be sure whether an unobserved interaction cannot occur or whether it simply did not occur at a particular site.
 
 
-          Some of the uncertainty about $\chi_{ij}$$ could be addressed by drawing on the rich literature about interaction contingencies found in community ecology. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} all affect the probability of an interaction occurring at a particular site and time, and could be included in models similar to trait-matching models. Alternatively, interaction probabilities could be tested in mesocosm studies with constant conditions. Some studies attempt to reduce uncertainty by sampling intensively over a short period of time and restricting the scale of interest to interactions occurring at the sampling site and time (conflating $\chi_{ij}$ and $\lambda_{ij}$)~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a}. This approach may be suitable for some research questions, but is not appropriate if we wish to assemble the full set of interactions which occur in a community (beyond the specific site and time of sampling). In contrast, expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of microhabitats or during a variety of weather conditions) will help to reduce uncertainty about $\chi_{ij}$ by including a broader range of parameters affecting interaction probability. It is unlikely, however, that resources will permit researchers to sample in the full range of sites and conditions covered by a community, and some uncertainty about $\chi_{ij}$ will remain.
+          Some of the uncertainty about $\chi_{ij}$ could be addressed by drawing on the rich literature about interaction contingencies found in community ecology. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects~\citep{Luttbeg2005,Wirsing2008} all affect the probability of an interaction occurring at a particular site and time, and could be included in models similar to trait-matching models. Alternatively, interaction probabilities could be tested in mesocosm studies with constant conditions. Some studies attempt to reduce uncertainty by sampling intensively over a short period of time and restricting the scale of interest to interactions occurring at the sampling site and time (conflating $\chi_{ij}$ and $\lambda_{ij}$)~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a}. This approach may be suitable for some research questions, but is not appropriate if we wish to assemble the full set of interactions which occur in a community (beyond the specific site and time of sampling). In contrast, expanding sampling to cover a broader spatial or temporal range (e.g., sampling in a variety of microhabitats or during a variety of weather conditions) will help to reduce uncertainty about $\chi_{ij}$ by including a broader range of parameters affecting interaction probability. It is unlikely, however, that resources will permit researchers to sample in the full range of sites and conditions covered by a community, and some uncertainty about $\chi_{ij}$ will remain.
 
          % One proposed solution to the problem of process uncertainty is to use repeated sampling of networks. For example,~\citet{Weinstein2017-wrong one?} used repeated sampling to estimate the daily probability of detecting an interaction and thereby attempted to separate detection and process uncertainty.[[This apparently confused R3]] While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (e.g., associations between hosts and parasitoids with a single generation per year), which would require multi-year sampling efforts, or very rare interactions which would require extremely high sampling effort to detect. Moreover, the faster accumulation of species than interactions means that repeated sampling will tend to introduce more unobserved interactions than observed interactions unless the number of samples is high enough to ensure that all species present have been observed~\citep{Poisot2012,Jordano2016}.
 
@@ -331,7 +331,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       Researchers are often interested in measures of network structure rather than the network itself. Computing most network metrics is straightforward when the different $\lambda_{ij}$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda_{ij}$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Thus, any uncertainty in the values of $\lambda_{ij}$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera2009}.
 
 
-      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. This gives us an estimate for each property reflecting our uncertainty about $\lambda_{ij}$.
+      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated, as examples of commonly-used network properties, the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. This gives us an estimate for each property reflecting our uncertainty about $\lambda_{ij}$.
 
 
       Measures of network structure which are based on empirical networks that are missing interactions may differ substantially from the values that would be obtained if detection certainty and variation in interactions over space and time could be removed. To demonstrate this, we created a suite of filtered networks for each posterior network. Taking a posterior network as the "true" network, we randomly sampled 90\%, 80\%, 70\%, 60\%, 50\%, 40\%, 30\%, 20\%, and 10\% of the interactions to create a new "filtered" network. This gradient is akin to a gradient of uncertainty in the network (e.g., due to varying sampling effort or intraspecific trait variability). For each level of uncertainty, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 filtered networks). We calculated the same network properties as described above for all posterior and filtered networks.
@@ -339,7 +339,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 \section*{Results}
 
-  In the \emph{Salix}-based food webs sampled by~\citet{Kopelke2017}, most pairs of gallers and natural enemies (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
+  In the \emph{Salix}-based food webs sampled by~\citet{Kopelke2017}, most pairs of gallers and natural enemies (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87, median=2; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04, median=2; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
 
 
   We obtained prior parameters of $\alpha_{ij}$=0.700, $\beta_{ij}$=8.49, giving a beta distribution strongly skewed towards 0. Where $n=0$, these parameters gave a posterior distribution with $\bar\lambda$=0.076, var($\lambda_{ij}$)=0.008. When $n=374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76$\times10^6$. This distributions is very close to 0 with small variance about $\lambda_{ij}$; if species $i$ and $j$ co-occurred 374 times without interacting, they are extremely unlikely to do so at other sites or times. 
@@ -348,7 +348,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   For most pairs of species $i$ and $j$, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S9}). To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.01 would require 15, 39, and 229 observed co-occurrences, respectively. Note that these are relatively large sample sizes compared to currently-available empirical networks (e.g.,~\citealp{Morris2014}).
 
 
-  Scaling up to network structure, we found that the connectance and mean links per galler and natural enemy were much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.186 $\leq$ C $\leq$ 0.198, 13.4 $\leq L_{galler} \leq$ 14.6, and 23.4 $\leq L_{natural enemy} \leq$ 25.0). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}A,B,D). Nestedness was higher in the observed network (NODF=6.85) than in the posterior webs (6.31 $\leq NODF \leq$ 6.82; Fig.~\ref{posterior_webs}C); in this case, the stronger the detection filter, the farther apart were the observed and posterior webs. In general, the observed network is most similar to simulated networks where only half of the plausible links are detected. 
+  Scaling up to network structure, we found that the connectance and mean links per galler and natural enemy were much lower in the observed web (C=0.078, $L_{galler}$=9.99, and $L_{natural enemy}$=7.45, respectively) than in the posterior webs (0.186 $\leq$ C $\leq$ 0.198, 13.4 $\leq L_{galler} \leq$ 14.6, and 23.4 $\leq L_{natural enemy} \leq$ 25.0). When the detection probability was relatively low (i.e., 50\%), however, the properties of randomised networks became similar to those in the observed webs (Fig.~\ref{posterior_webs}A,B,D). Nestedness was higher in the observed network (NODF=6.85) than in the posterior webs (6.31 $\leq NODF \leq$ 6.82; Fig.~\ref{posterior_webs}C), indicating that the posterior webs include many more interactions between specialists than the observed network. In addition, the stronger the detection filter, the farther apart were the nestedness of the observed and posterior webs. This suggests that the interactions included in the observed network are not a random subset of those included in the posterior webs. In general, the observed network is most similar to simulated networks where only half of the plausible links are detected. 
 
   % Poisot2015 - also found that NODF was higher in the empirical data than in sims. 
 
