--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -5356,7 +5356,7 @@ doi={10.1371/journal.pone.0069200},
 }
 @article{Weinstein2017a,
 year={2017},
-author={Weinstein, B and Graham C},
+author={Weinstein, B and Graham, Catherine},
 title={Persistent bill and corolla matching despite shifting temporal resources in tropical hummingbird-plant interactions},
 journal={Ecol Lett},
 volume={20},
@@ -5382,22 +5382,21 @@ doi={10.3310/hta4380},
 }
 @article{Leyland2005,
 year={2005},
-author={Leyland, A and Davies, C},
-title={},
-journal={},
-volume={},
-pages={},
-doi={},
+author={Leyland, Alistair H and Davies, Carolyn A},
+title={Empirical Bayes methods for disease mapping},
+journal={Stat Methods Med Res},
+volume={14},
+pages={17--34},
+doi={https://doi.org/10.1191/0962280205sm387oa},
 }
 @article{Berger2006,
 year={2006},
-author={Berger, J},
-title={}, 
-
-journal={},
-volume={},
-pages={},
-doi={},
+author={Berger, James},
+title={The case for objective Bayesian analysis}, 
+journal={Bayesian Anal},
+volume={1},
+pages={385--402},
+doi={10.1214/06-BA115},
 }
 @misc{Gelmanblog,
 year={2016},
@@ -5408,21 +5407,20 @@ note={Accessed: 2018-11-29}
 }
 @article{Casella1985,
 year={1985},
-author={Casella, G},
-title={},
-journal={},
-volume={},
-pages={},
-doi={},
+author={Casella, George},
+title={An introdution to empirical Bayes data analysis},
+journal={The American Statistician},
+volume={39},
+pages={83--87},
+doi={10.1080/00031305.1985.10479400},
 }
 @article{Copas1972,
 year={1972},
 author={Copas, J. B.},
-title={},
-journal={},
-volume={},
-pages={},
-doi={},
+title={Empirical Bayes methods and the repeated use of a standard},
+journal={Biometrika},
+volume={59},
+pages={349--360},
 }
 @article{Brooks2015,
 year={2015},
